# fintastic

./: README.md  meson.build
code/: app.c  app.h  determine.c  determine.h  display.c  display.h  input.c  input.h  match.c  match.h  meson.build  player.c  player.h  scoreboard.c  scoreboard.h  story.c  story.h
data/: determine_paper.txt  determine_rock.txt  determine_scissors.txt  meson.build  result_lose.txt  result_win.txt
subprojects/: fscl-xfish-c.wrap  fscl-xmock-c.wrap  fscl-xpattern-c.wrap
test/: meson.build  xtest_determine.c  xtest_input.c  xtest_match.c  xtest_player.c  xtest_scoreboard.c  xunit_runner.c
